# qdu-rm-ai

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Style Guide.md  use.md
.github/: release-drafter.yml
.github/workflows/: build.yml
assets/other/: index.html  video.js
runtime/: MV-CA016-10UC-6mm.json  MV-CA016-10UC-6mm_1.json  MV-CA016-10UC-6mm_2.json  RMUL2021_Armor.json  RMUL2022_Armor.json  RMUT2021_Buff.json  RMUT2022_Antitop.json  RMUT2022_Buff copy.json  RMUT2022_Buff.json  RMUT2022_Buff_Pre.json  RMUT2022_OreCube.json  auto_aim.sh  light_params.json  mlp.onnx  test_params.json
src/: CMakeLists.txt
src/app/: app.hpp
src/app/aim_assistant/: CMakeLists.txt  main.cpp
src/app/auto_aim/: CMakeLists.txt  main.cpp
src/app/buff/: CMakeLists.txt  main.cpp
src/app/dart/: CMakeLists.txt  main.cpp
src/app/radar/: CMakeLists.txt  main.cpp
src/app/sentry/: CMakeLists.txt  main.cpp
src/app/ui_param/: CMakeLists.txt  armor_ui.hpp  auto_aim.cpp  buff.cpp  buff_ui.hpp  guiding_light.cpp  light_ui.hpp  main.cpp  ui.hpp
src/apps/app/: CMakeLists.txt
src/apps/app/aim_assistant/: main.cpp
src/apps/app/auto_aim/: main.cpp  number_classifier.hpp
src/apps/app/buff/: main.cpp
src/apps/app/radar/: main.cpp
src/apps/app/sentry/: main.cpp
src/apps/app/ui_param/: CMakeLists.txt  antitop_ui.hpp  armor_ui.hpp  buff_ui.hpp  main.cpp  ui.hpp
src/apps/demo/: CMakeLists.txt
src/apps/demo/armor/: main.cpp
src/apps/demo/buff/: main.cpp
src/apps/demo/camera/: CMakeLists.txt  main.cpp
src/apps/tests/: CMakeLists.txt
src/apps/tests/behavior/: node.cpp
src/apps/tests/component/: semaphore.cpp
src/apps/tests/device/: CMakeLists.txt  hik_camera.cpp  raspi_camera.cpp  referee.cpp  robot.cpp  serial.cpp
src/apps/tests/vision/: CMakeLists.txt  armor_classifier.cpp  armor_detector.cpp  buff_detector.cpp  buff_predictor.cpp  ekf.cpp  guidinglight_detector.cpp  kalman.cpp  light_bar.cpp  ore_cube.cpp  orecube_detector.cpp  preprocess.cpp  trt_detector.cpp  video_recorder.cpp
src/apps/tests/web/: CMakeLists.txt  server.cpp
src/behavior/: CMakeLists.txt  behavior.cpp  behavior.hpp  node.cpp  node.hpp
src/component/: CMakeLists.txt  async.hpp  build_type.hpp.in  common.cpp  common.hpp  log.cpp  log.hpp  om_config.h  semaphore.hpp  timer.hpp
src/component/om/: CMakeLists.txt  om_config.h.in
src/demo/: demo.hpp
src/demo/aim_assistant/: main.cpp
src/demo/armor/: CMakeLists.txt  main.cpp
src/demo/buff/: CMakeLists.txt  main.cpp
src/demo/camera/: CMakeLists.txt  main.cpp
src/device/: CMakeLists.txt  camera.hpp  hik_camera.cpp  hik_camera.hpp  raspi_camera.cpp  robot.cpp  robot.hpp  serial.cpp  serial.hpp  servo.cpp  usb.cpp  usb.hpp
src/device/camera/: CMakeLists.txt  camera.hpp  hik_camera.cpp  hik_camera.hpp  raspi_camera.cpp  raspi_camera.hpp
src/device/controller/: CMakeLists.txt  robot.cpp  robot.hpp  serial.cpp  serial.hpp  usb.cpp  usb.hpp
src/device/servo/: CMakeLists.txt  servo.hpp
src/vision/: CMakeLists.txt  armor.cpp  armor.hpp  armor_detector.cpp  buff.cpp  buff_detector.cpp  buff_detector.hpp  detector.hpp  light_bar.cpp  object.hpp  predictor.cpp  predictor.hpp  trt_detector.cpp
src/vision/classifier/: CMakeLists.txt  armor_classifier.cpp  armor_classifier.hpp  number_classifier.cpp  number_classifier.hpp  template_matcher.cpp  template_matcher.hpp
src/vision/compensator/: CMakeLists.txt  compensator.cpp  compensator.hpp
src/vision/detector/: CMakeLists.txt  aim_assitant.cpp  aim_assitant.hpp  armor_detector.cpp  armor_detector.hpp  async_armor_detector.cpp  async_armor_detector.hpp  buff_detector.cpp  buff_detector.hpp  detector.hpp  guidinglight_detector.cpp  guidinglight_detector.hpp  orecube_detector.cpp  orecube_detector.hpp  radar_detector.cpp  radar_detector.hpp  snipe_detector.cpp  snipe_detector.hpp  trt_detector.cpp  trt_detector.hpp
src/vision/object/: CMakeLists.txt  armor.cpp  armor.hpp  buff.cpp  buff.hpp  guiding_light.cpp  guiding_light.hpp  light_bar.cpp  light_bar.hpp  object.cpp  object.hpp  ore_cube.cpp  ore_cube.hpp  video_recorder.hpp
src/vision/params/: CMakeLists.txt  antitop_param.cpp  antitop_param.hpp  armor_param.cpp  armor_param.hpp  buff_param.cpp  buff_param.hpp  guidinglight_param.cpp  guidinglight_param.hpp  param.hpp
src/vision/predictor/: CMakeLists.txt  anti_whippingtop.cpp  anti_whippingtop.hpp  armor_predictor.cpp  armor_predictor.hpp  buff_predictor.cpp  buff_predictor.hpp  ekf.cpp  ekf.hpp  filter.cpp  filter.hpp  kalman.cpp  kalman.hpp  predictor.cpp  predictor.hpp
src/vision/process/: CMakeLists.txt  aim_assitant.cpp  aim_assitant.hpp
src/web/: CMakeLists.txt  server.hpp  video_server.cpp  video_server.hpp
tests/: CMakeLists.txt
tests/behavior/: CMakeLists.txt  behavior.cpp
tests/component/: CMakeLists.txt  common.cpp  log.cpp
tests/device/: CMakeLists.txt  hik_camera.cpp  raspi_camera.cpp
tests/nn/: CMakeLists.txt  detector.cpp
tests/vision/: CMakeLists.txt  aim_assitant.cpp  armor.cpp  armor_classifier.cpp  armor_detector.cpp  buff_detector.cpp  buff_predictor.cpp  compensator.cpp  ekf.cpp  filter.cpp  guidinglight_detector.cpp  kalman.cpp  light_bar.cpp  orecube_detector.cpp  preprocess.cpp  trt_detector.cpp
utils/: project.py  tools.cmake
