cmake_minimum_required(VERSION 3.5)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/object)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/detector)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/predictor)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/classifier)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/compensator)
